<resources>
    <string name="app_name">Tourism</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="go_to_sign_up_page">Go to sign up page</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="loading_user">Loading user...</string>
    <string name="logout">Logout</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="by_signing_up_you_agree_to_our_terms_of_service_and_privacy_policy">By signing up, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="travel_to_anywhere_with_us">Travel to Anywhere with Us</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="by_signing_up_you_agree_to_our_terms_privacy_policy"><![CDATA[By signing up, you agree to our Terms & Privacy Policy.]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="if_dont_have_an_account_please_sign_up">if dont have an account, please sign up</string>
</resources>