<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:scaleType="centerCrop"
            android:src="@drawable/header_image" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/email"
            android:layout_width="374dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_background"
            android:hint="@string/email"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="#000000"
            android:layout_marginBottom="12dp"/>

        <!-- Password Input -->
        <EditText
            android:id="@+id/password"
            android:layout_width="377dp"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/input_background"
            android:hint="@string/password"
            android:textColorHint="@android:color/darker_gray"

            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#000000" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:text="@string/continue_with_email"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/termsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/by_signing_up_you_agree_to_our_terms_privacy_policy"
            android:textColor="#666666"
            android:textSize="@dimen/text_size_medium" />

        <!-- Already Have an Account? -->
        <TextView
            android:id="@+id/goToLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/already_have_an_account_log_in"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</ScrollView>