<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:scaleType="centerCrop"
            android:src="@drawable/header_image" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="25dp"
            android:gravity="center" />


        <EditText
            android:id="@+id/email"
            android:layout_width="374dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="email"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/input_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="#000000"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="377dp"
            android:layout_height="50dp"
            android:autofillHints="false"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/input_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#000000" />


        <Button
            android:id="@+id/loginUpButton"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:text="@string/continue_with_email"
            android:textColor="@android:color/white"/>




        <TextView
            android:id="@+id/goToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_dont_have_an_account_please_sign_up"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="15dp" />

    </LinearLayout>
</ScrollView>
